<resources>
    <string name="app_name">海尼期珠宝</string>
    <string name="action_settings">Settings</string>

    <!-- 退出APP的Toast -->
    <string name="exit_app_toast">再按一次退出应用</string>
    <!-- 登录 -->
    <string name="login_title">登录</string>

    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="setting">设置</string>

    <string name="submit">确定</string>

    <string name="unknownError">未知错误\n轻触重新加载</string>
    <string name="onReload">\n轻触重新加载</string>

    <!--按钮文字-->
    <string name="next">下一步</string>

    <!--权限-->
    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>

    <!--bugly-->
    <string name="strToastYourAreTheLatestVersion">你已经是最新版了</string>
    <string name="strToastCheckUpgradeError">检查新版本失败，请稍后重试</string>
    <string name="strToastCheckingUpgrade">正在检查，请稍候...</string>
    <string name="strNotificationDownloading">正在下载</string>
    <string name="strNotificationClickToView">点击查看</string>
    <string name="strNotificationClickToInstall">点击安装</string>
    <string name="strNotificationClickToRetry">点击重试</string>
    <string name="strNotificationDownloadSucc">下载完成</string>
    <string name="strNotificationDownloadError">下载失败</string>
    <string name="strNotificationHaveNewVersion">有新版本</string>
    <string name="strNetworkTipsMessage">你已切换到移动网络，是否继续当前下载？</string>
    <string name="strNetworkTipsTitle">网络提示</string>
    <string name="strNetworkTipsConfirmBtn">继续下载</string>
    <string name="strNetworkTipsCancelBtn">取消</string>
    <string name="strUpgradeDialogVersionLabel">版本</string>
    <string name="strUpgradeDialogFileSizeLabel">包大小</string>
    <string name="strUpgradeDialogUpdateTimeLabel">更新时间</string>
    <string name="strUpgradeDialogFeatureLabel">更新说明</string>
    <string name="strUpgradeDialogInstallBtn">安装</string>
    <string name="strUpgradeDialogRetryBtn">重试</string>
    <string name="strUpgradeDialogContinueBtn">继续</string>
    <string name="strUpgradeDialogUpgradeBtn">确定</string>
    <string name="strUpgradeDialogCancelBtn">取消</string>
    <string name="orderSearchEmp">什么都没找不到</string>
    <string name="get">获得</string>


    <string name="alowWifi">运行非WIFI环境下自动播放视频</string>
    <string name="sharetaotuContent">这是我刚拍的写真照片，喜欢我的人都看了</string>
    <string name="exchangeTitle">兑换说明</string>
    <string name="string_language_change">中文&#8194;/&#8194;繁体</string>
    <string name="string_single_design">专属设计</string>
    <string name="string_online_mark">在线商城</string>
    <string name="string_only_you">情侣对戒</string>
    <string name="string_with_heart">精选款式</string>
    <string name="string_good_diamond">优选美钻</string>
    <string name="string_username">用户名</string>
    <string name="string_pwd">密&#8195;码</string>
    <string name="string_hint_username">请输入用户名</string>
    <string name="string_hint_pwd">请输入密码</string>
    <string name="string_login">登录</string>
    <string name="string_my_account">我的账号</string>
    <string name="string_orders">我的订单</string>
    <string name="string_myinfo">个人信息</string>
    <string name="string_address">收货信息</string>
    <string name="string_change_pwd">修改密码</string>
    <string name="string_company">单位名称</string>
    <string name="string_manager">负责人</string>
    <string name="string_tel">联系方式</string>
    <string name="string_company_address">单位地址</string>
    <string name="string_company_tel">单位电话</string>
    <string name="string_company_fax">单位传真</string>
    <string name="string_code">邮政编码</string>
    <string name="string_sure">确定</string>
    <string name="string_receiver_username">收货人姓名</string>
    <string name="string_receiver_tel">收货人电话</string>
    <string name="string_receiver_phone">收货人手机</string>
    <string name="string_receiver_address">收货人地址</string>
    <string name="string_old_pwd">旧密码</string>
    <string name="string_new_pwd">新密码</string>
    <string name="string_sure_pwd">确认密码</string>
    <string name="string_order_id">订单号</string>
    <string name="string_receiver_name">收货人</string>
    <string name="string_contact">联系方式</string>
    <string name="string_price">价格</string>
    <string name="string_order_status">订单状态</string>
    <string name="string_order_time">订购时间</string>
    <string name="string_order_manager">管理</string>
    <string name="string_good_id">货号</string>
    <string name="string_good_number">款号</string>
    <string name="string_main_weight">可镶主钻重量</string>
    <string name="string_main_shape">可镶主钻形状</string>
    <string name="string_material">空托材质</string>
    <string name="string_gold_weight">金重</string>
    <string name="string_part_weight">副钻重量</string>
    <string name="string_hand_size">手寸</string>
    <string name="string_remark">备注</string>
    <string name="string_diamond_shape">形状</string>
    <string name="string_diamond_weight">重量</string>
    <string name="string_diamond_color">颜色</string>
    <string name="string_diamond_pure">净度</string>
    <string name="string_diamond_cut">切工</string>
    <string name="string_diamond_polish">抛光</string>
    <string name="string_diamond_symmetry">对称</string>
    <string name="string_diamond_fluorescence">荧光</string>
    <string name="string_diamond_picture">图片</string>
    <string name="string_diamond_video">视频</string>
    <string name="string_diamond_id">证书号</string>
    <string name="string_diamond_price">价格</string>
    <string name="string_diamond_buy">订购</string>
    <string name="string_4c">4&#160;C&#160;选&#160;钻</string>
    <string name="string_traditional">传&#160;统&#160;选&#160;钻</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
