<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/icon_login_bg">

    <FrameLayout
        android:layout_width="440dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_login_white_border">

        <LinearLayout
            android:id="@+id/ll_Login"
            android:layout_width="400dp"
            android:layout_height="360dp"
            android:layout_gravity="center"
            android:alpha="0.94"
            android:background="@drawable/bg_white"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/icon_login_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_grey_border"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/string_username"
                    android:textColor="@color/black_131313"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/string_hint_username"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black_131313"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_grey_border"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/string_pwd"
                    android:textColor="@color/black_131313"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/string_hint_pwd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black_131313"
                    android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_login_grey_orange_border"
                android:gravity="center"
                android:text="@string/string_login"
                android:textColor="@color/orange_d5b75f"
                android:textSize="14sp"
                />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_error_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:alpha="0.94"
            android:background="@drawable/bg_white"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <ImageView
                android:id="@+id/iv_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@drawable/icon_finish"
                />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_text_bg"
                />

            <TextView
                android:id="@+id/tv_error_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:letterSpacing="0.5"
                android:textColor="@color/cardview_dark_background"
                android:textSize="10sp"
                />
        </RelativeLayout>

    </FrameLayout>

</FrameLayout>